# ghostty

./: .cirrus.yml  .dockerignore  .gitignore  ACCESSIBILITY_IMPLEMENTATION.md  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  Dockerfile  HACKING.md  HOMEBREW-SETUP.md  IMAGE_UPLOAD_DESIGN.md  LICENSE  Makefile  PACKAGING.md  README-LINUX.md  README.md  ROADMAP.md  SECURITY.md  TEST4.md  UPDATE-GUIDE.md  VISIONOS_FORKS.md  VISIONOS_PORT_PLAN.md  WINDOWS.md  WINDOWS_PORT.md  brand.md  build.zig  build.zig.zon  build.zig.zon.json  build.zig.zon.nix  build.zig.zon.txt  build.zig.zon2json-lock  com.mitchellh.ghostty.yml  execution-plan.md  flake.nix  install_linux.nu  (+14 more)
.claude/: settings.json
.githooks/: pre-commit
.github/: VOUCHED.td  pull_request_template.md
.kanban/: tasks.json
cli/: .gitignore  Package.swift  README.md
config/: statusline.sh
data/: com.mitchellh.ghostty.gschema.xml  ghostty.gschema.xml.in
datalog/: 2026-04-29_00-02-45.jsonl  2026-04-29_00-02-45.md  2026-04-29_00-10-39.jsonl  2026-04-29_00-10-39.md  2026-04-29_00-34-32.jsonl  2026-04-29_00-34-32.md  2026-04-29_00-39-36.jsonl  2026-04-29_00-39-36.md  2026-04-29_00-53-06.jsonl  2026-04-29_00-53-06.md
deb/: build.sh
demo/: Package.swift  package-kanbango.sh  run.sh
docs/: 2026-04-27-session-surface-integration.md  MERGE_STRATEGY.md  PLAN.md  PR_DRAFTS.md  README.md  SESSION_NOTES.md  config  full-loop-smoke.md  getting-started.md  ghostty-kanban-full.md  linear-mcp-probe-findings.md  mocks.md  popup-terminal.md  prototype.html  release-checklist.md  sidebar-architecture-evolution.md  sidebar-architecture-final.md  status.md  task-flows.html
drafts/: ghostties-first-dmg.md
embed-test/: build.sh  main.c
example/: .gitignore  .proxyrc.js  README.md  app.ts  imports.ts  index.html  notes.md  old.ts  package-lock.json  package.json  worker.ts
example/c-vt-cmake/: CMakeLists.txt  README.md
example/c-vt-cmake-static/: CMakeLists.txt  README.md
flatpak/: com.mitchellh.ghostty-debug.yml  com.mitchellh.ghostty.Devel.yml  com.mitchellh.ghostty.yml  dependencies.yml  zig-packages.json
include/: ghostty.h  module.modulemap
macos/: .gitignore  AGENTS.md  Ghostties-Info.plist  Ghostties.entitlements  GhosttiesHelper.entitlements  Ghostty-Info.plist  Ghostty.sdef  Ghostty.xctestplan  GhosttyReleaseLocal.entitlements  Localizable.xcstrings  build.nu
munkipkg/: .gitignore  build-info.yaml
nix/: blueprint-compiler.nix  devShell.nix  devshell.nix  libghostty-vt.nix  package.nix  tests.nix  zigCacheHash.nix
notes/: claude_unfocused_window_plan.md  gtk_unfocused_window_implementation.md  test_unfocused_window_gtk.conf
pkg/: README.md
po/: README_CONTRIBUTORS.md  README_TRANSLATORS.md  bg.po  bg_BG.UTF-8.po  ca.po  com.mitchellh.ghostty.pot  cs_CZ.UTF-8.po  de.po  de_DE.UTF-8.po  es_AR.UTF-8.po  es_AR.po  es_BO.po  es_ES.UTF-8.po  es_ES.po  fi_FI.UTF-8.po  fr.po  fr_FR.UTF-8.po  ga.po  gl.po  he.po  he_IL.UTF-8.po  he_IL.UTF-8.po.txt  hi_IN.UTF-8.po  hi_IN.po  hi_IN@hinglish.UTF-8.po  hr.po  hr_HR.UTF-8.po  hu.po  hu_HU.UTF-8.po  id.po  id_ID.UTF-8.po  is.po  it.po  it_IT.UTF-8.po  ja.po  ka.po  kk.po  kk_KZ.UTF-8.po  ko_KR.po  lt.po  (+31 more)
qt/: CMakeLists.txt  PARITY.md
qt/protocols/: alpha-modifier-v1.xml
qt/src/: CommandPalette.cpp  CommandPalette.h  GhosttySurface.cpp  GhosttySurface.h  GhosttyWindow.cpp  GhosttyWindow.h  GlobalShortcuts.cpp  GlobalShortcuts.h  InspectorWindow.cpp  InspectorWindow.h  MainWindow.cpp  MainWindow.h  OverlayScrollbar.cpp  OverlayScrollbar.h  SearchBar.cpp  SearchBar.h  TabWidget.cpp  TabWidget.h  Util.cpp  Util.h  WindowBlur.cpp  WindowBlur.h  XkbTracker.cpp  XkbTracker.h  main.cpp
qt/src/actions/: ActionDispatcher.cpp  ActionDispatcher.h  ChromeActions.cpp  InputActions.cpp  SplitActions.cpp  SystemActions.cpp  TabActions.cpp  WindowActions.cpp
qt/src/app/: GhosttyApp.cpp  GhosttyApp.h
qt/src/bell/: BellPlayer.cpp  BellPlayer.h
qt/src/config/: Config.cpp  Config.h
qt/src/input/: XkbState.cpp  XkbState.h
qt/src/opengl/: EglDmabufTarget.cpp  EglDmabufTarget.h
qt/src/quickterm/: QuickTerminal.cpp  QuickTerminal.h
qt/src/undo/: UndoStack.cpp  UndoStack.h
qt/src/vulkan/: Host.cpp  Host.h
qt/src/wayland/: AlphaModifier.cpp  AlphaModifier.h  DmabufRegistry.h  EglDmabufTarget.cpp  EglDmabufTarget.h  SubsurfacePresenter.cpp  SubsurfacePresenter.h
scripts/: build-cef-wrapper.sh  build-visionos-xcframework.sh  bump-version.sh  debug-createprocess.cmd  debug-win32-render.cmd  dev-windows.cmd  dev-windows.ps1  dev-wsl.sh  download-cef.sh  embed-cef.sh  embed-ghostty-resources.sh  fetch-zig-deps.cmd  fetch-zig-deps.ps1  install-ghostty-rhel9.sh  install-gt.sh  package-windows.ps1  perf-triage.sh  profile.sh  release_local.sh  update-web-version.py  zig-visionos.sh
snap/: snapcraft.yaml
src/: App.zig  Command.zig  DevMode.zig  Pty.zig  Surface.zig  ViMode.zig  Window.zig  apprt.zig  blocking_queue.zig  booid.zig  build_config.zig  cli.zig  compat.zig  config.zig  file_type.zig  generate_ghostty_1_markdown.zig  generate_ghostty_5_markdown.zig  generate_help.zig  generate_help_strings.zig  global.zig  helpgen.zig  input.zig  jsongen.zig  lib_vt.zig  log.zig  main.zig  main_build_data.zig  main_c.zig  main_ghostty.zig  main_snap.zig  main_wasm.zig  pty.zig  quirks.zig  renderer.zig  surface_mouse.zig  tcp.zig  termio.zig  tripwire.zig  vulkan_spvgen.zig
src/apprt/win32/winui/: CMakeLists.txt  build_winui.bat  compile_commands.json  ghostty_winui.cpp  ghostty_winui.h  make_pri.ps1  pch.h
src/apprt/win32/winui/.cache/clangd/index/: ghostty_winui.cpp.315FE0C2EDCFE65B.idx  ghostty_winui.h.BC94D626D2AC8E52.idx  pch.h.CADFCAC1ABC28DF2.idx
test/: README.md  windows-hello-world.ps1  windows-interactive-input.ps1  windows-terminal-bench.ps1  windows-unfocused-redraw.ps1
todos/: 001-complete-p1-multi-window-notification-scoping.md  002-complete-p1-empty-tree-closes-window.md  003-complete-p2-orphaned-lastSelectedProjectId.md  004-complete-p2-notification-ordering-race.md  (+27 more)
tools/: debug-proxy.py  (+2 more)
(+1591 files in other folders)
